--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 /* Navbar */
 .navbar {
   background: rgb(255, 250, 250);
-  color: #03f538;
+  color: black;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -56,4 +56,76 @@ body {
 
 .hero p {
   font-size: 18px;
+}
+ /* Main Section */
+.main-section {
+  display: flex;
+  gap: 20px;
+  padding: 20px;
+}
+
+/* Cards Section */
+.cards {
+  flex: 2;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+  gap: 20px;
+}
+
+.card {
+  background: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
+
+.card-header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.badge {
+  background:gray;
+  color: #fff;
+  padding: 2px 8px;
+  border-radius: 5px;
+  font-size: 12px;
+  max-width: 60px,60px;
+}
+.badge img{
+    max-width: 30px;
+}
+
+.card-buttons {
+  margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.card-buttons button {
+  flex: 1;
+  margin: 0 5px;
+  padding: 8px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.copy-btn {
+  background: #eee;
+}
+
+.call-btn {
+  background: #2ecc71;
+  color: #fff;
+}
+
+/* History Section */
+.history {
+  flex: 1;
+  background: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 }
