--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Arial, sans-serif;
-}
 
 body {
   background: #f5f5f5;
@@ -17,7 +11,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 15px 30px;
-  text color: rgba(41, 167, 74, 1);
+  color: rgba(41, 167, 74, 1);
 }
 
 .logo {
@@ -66,7 +60,7 @@ body {
 
 /* Cards Section */
 .cards {
-  flex: 2;
+  flex: 3;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
   gap: 20px;
@@ -86,7 +80,7 @@ body {
 }
 
 .badge {
-  background:#FFE3E2;
+  background:gray;
   color: #fff;
   padding: 2px 8px;
   border-radius: 5px;
@@ -94,7 +88,7 @@ body {
   max-width: 60px,60px;
 }
 .badge img{
-    max-width: 30px;
+ max-width:30px;
 }
 
 .card-buttons {
@@ -128,4 +122,27 @@ body {
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
+
+.history-header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+#historyList {
+  list-style: none;
+  font-size: 14px;
+  max-height: 300px;
+  overflow-y: auto;
+}
+
+/* Responsive */
+@media (max-width: 576px) {
+  .main-section {
+    flex-direction: column;
+  }
+  .cards {
+    grid-template-columns:1fr;
+  }
 }
